- Issue 251: Fix a typo, Fix a typo in line #92. 'cuncurrent' -> 'concurrent' (Avi)
- Issue 279: TikaException is thrown while crawling several PDFs in a row The problem was the wrong re-use of the metadata (Avi)
- Issue 139: A URL with a backslash was rejected (Avi)
- Issue 231: Memory leakage in crawler4j caused by database environment, Closing the environment solves the leak. (Avi)

Version 3.5 (March 2013)
- Fixed issues #184, #169, #136, #156, #191, #192, #127 (Yasser)
- Fixed  issue #101  in normalizing Urls (Yasser)
- Fixed  issue #143 : Anchor text is now provided correctly (Yasser)
- Access to response headers is now provided as a field in Page object (Yasser)
- Added support for handling content fetch and parsing issues. (Yasser)
- Added meta refresh and location to outgoing links (Yasser)
- Upgraded to Java 7 (Yasser)
- Updated dependencies to their latest versions (Yasser)

Version 3.3
- Updated URL canonicalizer based on RFC1808 and fixed bugs (Yasser)
- Added Parent Url and Path to WebURL (Yasser)
- Added support for domain and sub-domain detection. (Yasser)
- Added support for handling http status codes for fetched pages (Yasser)

Version 3.1
- Fixed thread-safety bug in page fetcher. (Yasser)
- Improved URL canonicalizer. (Yasser)

Version 3.0
- Major re-design of crawler4j to add many new features and make it extendable. (Yasser)
- Multiple distinct crawlers can now run concurrently. (Yasser)
- Maven support (Yasser)
- Automatic detection of character encoding of pages to support crawling of non UTF-8 pages. (Yasser)
- Implemented graceful shutdown of the crawlers. (Yasser)
- Crawlers are now configurable through a config objects and the static crawler4j.properties file is removed. (Yasser)
- Fixed several bugs in handling redirects, resuming crawling, ... (Yasser)

Version 2.6.1
- Added Javadocs (Yasser)
- Fixed bug in parsing robots.txt files (Yasser)

Version 2.6
- Added support for robots.txt files (Yasser)